theme/static/css/style.css
/* ... */
#contact > div {
  flex-basis: 100%;
}
#contact #map {
  border: 1px solid #bbb;
  flex-basis: 100%;
  height: 60vh;
  margin: 1em 0;
  width: 100%;
}

@media screen and (min-width: 768px) {
  #contact #map { height: 30em; }
}

@media screen and (min-width: 1000px) {
  #contact > div { flex-basis: 50%; }
  #contact > div:nth-child(2n) { text-align: right; }
}

div.leftside {
    width: 700px;
    padding: 0px 3px 0px 0px;
    float: left;
}

div.rightside {
    margin-left: 50px;
}

.highlight {
    color:#C50E1F;
}

table {
  border-collapse: collapse;
}

th, td {
  padding: 12px;
  text-align: left;
}


#rightside{
margin: 20px;
}

